<resources>
    <string name="app_name">leceladon_managing_1.0</string>
    <string name="txt_order_date">Par date</string>
    <string name="lib_inv">Libelle inventaire:</string>
    <string name="Quantite">Quantite:</string>
    <string name="date_entr_inv">Date entre:</string>
    <string name="date_renvo">Date de renouvellement:</string>
    <string name="date_cr_p">Date de création produit:</string>
    <string name="date_expir">Date d\'expiration:</string>
    <string name="type_prod">Type produit:</string>
    <string name="login">Login:</string>
    <string name="prod_renouv">Produit renouvelable:</string>
    <string name="mdp">Mot de passe:</string>
    <string name="crer_cmp">Créer un compte:</string>
    <string name="modifier">Modifier</string>
    <string name="annuler">Annuler</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="bon_c">Bon de commande:</string>
    <string name="suivant">Suivant</string>
    <string name="inscrir">S\'inscrire</string>
    <string name="ref_fact">Réference facture:</string>
    <string name="ref_bonc">Réference Bon de commande:</string>
    <string name="ref_prod">Réference produit:</string>
    <string name="statut_st">Statut Stock:</string>

    <!-- fornisseur -->
    <string name="name_forni">Fornisseur:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_active_">User_active_Activity</string>
</resources>
