<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.leceladon_managing_10.Leceladon"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:text="@string/lib_inv" />

    <EditText
        android:id="@+id/txtlib"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-95dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:text="@string/Quantite" />

    <EditText
        android:id="@+id/txtquan"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inv_dat_exp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-203dp"
        android:text="@string/date_expir" />

    <EditText
        android:id="@+id/inv_dat_exp"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="203dp"
        android:inputType="datetime" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date_renvou"
        android:layout_alignParentStart="true"
        android:text="@string/date_renvo" />

    <EditText
        android:id="@+id/date_renvou"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="248dp"
        android:inputType="datetime"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grp_radio"
        android:layout_alignParentStart="true"
        android:text="@string/prod_renouv" />

    <RadioGroup
        android:id="@+id/grp_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:checked="true"
            android:text="@string/oui"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:checked="false"
            android:text="@string/non"
            android:textSize="10dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bon_cmd"
        android:layout_alignParentStart="true"
        android:text="@string/bon_c" />

    <EditText
        android:id="@+id/bon_cmd"
        android:layout_width="326dp"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="165dp"
        android:inputType="numberSigned" />


        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    <Button
        android:id="@+id/btn_valide_nv_inv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="106dp"
        android:layout_marginEnd="33dp"
        android:text="@string/modifier" />

    <Button
        android:id="@+id/btn_ann_nv_inv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_valide_nv_inv"

        android:layout_toStartOf="@+id/btn_valide_nv_inv"
        android:text="@string/annuler"
        android:textAlignment="center" />



</RelativeLayout>
