<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/lib_inv" />

        <TextView
            android:id="@+id/txtinv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="xxxx" />

        <TextView
           android:id="@+id/txt2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/txtinv"
           android:text="@string/Quantite" />

         <TextView
               android:id="@+id/txtquan"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignStart="@+id/txtinv"
               android:layout_below="@+id/txtinv"
               android:text="kkkk" />

              <TextView
                     android:id="@+id/txt3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/date_entr_inv"
                     android:layout_below="@id/txtquan"/>

          <TextView
             android:id="@+id/txtdat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:layout_alignStart="@+id/txtquan"
                  android:layout_below="@+id/txtquan"
                 android:textSize="20dp"
                 android:text="jjjjj" />


              <TextView
                 android:id="@+id/txt4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txt3"
                 android:text="@string/date_expir" />

             <TextView
                 android:id="@+id/txtdat_exp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtdat"
                 android:layout_alignStart="@id/txtdat"
                 android:text="hhhh" />

            <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/txt3"
            android:layout_alignParentEnd="true"
            android:text=">" />

 <!--  -->
</RelativeLayout>
