<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.sam.leceladon_managing_10.new_inventaire">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:text="Ajouter Inventaire 1" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:text="@string/lib_inv" />


            <EditText
                android:id="@+id/etlib_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:inputType="textPersonName" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etlib"
                android:text="@string/Quantite" />
            <!-- ajouter un nouveau inventaire -->

            <EditText
                android:id="@+id/etquan_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView7"
                android:inputType="number" />



            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etdatexp"
                android:text="@string/type_prod" />



            <EditText
                android:id="@+id/ettypepro_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textView9"
                android:layout_toEndOf="@id/textView9"
                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/etdatexp"
                android:layout_toEndOf="@id/ettypepro"
                android:text="Etat produit" />
            <EditText
                android:id="@+id/etaprod_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textView10"
                android:layout_toEndOf="@id/textView10"
                />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textView11"
                android:text="Date d'expiration:" />

            <EditText
                android:id="@+id/date_expir_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/ettypepro"
                android:layout_below="@id/textView12"
                android:inputType="datetime" />
            <TextView
            android:id="@+id/textViewRen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_renvou"
            android:text="@string/prod_renouv"/>
            <RadioGroup
                android:id="@+id/grp_radio_nv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oui"
                    android:layout_marginRight="50dp"
                    android:checked="true"
                    android:textSize="10dp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:checked="false"
                    android:text="@string/non"
                    android:textSize="10dp" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/newInv_nv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:text="@string/suivant" />

                <Button
                    android:id="@+id/retour_nv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:text="@string/annuler" />
            </LinearLayout>
        </LinearLayout>


    <!--       <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etquan"
                android:text="@string/date_renvo" />

            <EditText
                android:id="@+id/etrenv_nv"
                android:layout_width="449dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView11"
                android:layout_toEndOf="@+id/textView11"
                android:inputType="datetime"/>    si le produit est renouvelle saisire la date sinon no type hiden yah-->

</RelativeLayout>
