<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.sam.leceladon_managing_10.Inventaire.New2Activity">

    <Button
        android:id="@+id/retour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:text="retour" />

    <Button
        android:id="@+id/newInv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="74dp"
        android:text="Envoyer" />

    <EditText
        android:id="@+id/etlib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etquan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etlib"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-81dp"
        android:text="@string/lib_inv" />


    <EditText
        android:id="@+id/etrenv"
        android:layout_width="449dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etlib"
        android:text="@string/Quantite" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etquan"
        android:text="@string/date_renvo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ettypepro"
        android:layout_alignParentStart="true"
        android:text="@string/type_prod" />

    <EditText
        android:id="@+id/ettypepro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/etdatexp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="205dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ettypepro"
        android:text="Etat produit" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="141dp"
        android:layout_marginStart="63dp"
        app:srcCompat="@mipmap/a195420364" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="151dp"
        android:layout_toEndOf="@+id/imageView12"
        android:text="Inventaire"
        android:textSize="24sp" />


</RelativeLayout>
