<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.leceladon_managing_10.MainActivity">

    <!--<RelativeLayout

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">-->

    <EditText
        android:id="@+id/editTextlog"
        style="@style/textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="aminaBen@hotmail.com" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/editTextlog"
        android:text="@string/mdp"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editTextpsw"
        style="@style/textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:text="pas1234" />

    <Button
        android:id="@+id/buttonconn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextpsw"
        android:layout_centerHorizontal="true"
        android:text="Se Connecter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextlog"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-228dp"
        android:layout_marginStart="23dp"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />

    <Button
        android:id="@+id/buttonlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:text="@string/crer_cmp" />

    <Button
        android:id="@+id/inv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonlink"
        android:layout_toEndOf="@+id/textView2"
        android:text="inv"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        app:srcCompat="@mipmap/leceladon_managing3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="33dp"
        android:layout_height="28dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="62dp"
        app:srcCompat="@mipmap/a92589064" />

</RelativeLayout>
